--- a/test.ipynb
+++ b/test.ipynb
@@ -2,36 +2,272 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thibaultdanel/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (8,10,12,14,16,17,18,20,22,26,35,36) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello la team LM\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3334147 entries, 0 to 3334146\n",
+      "Data columns (total 40 columns):\n",
+      " #   Column                        Dtype  \n",
+      "---  ------                        -----  \n",
+      " 0   id_mutation                   object \n",
+      " 1   date_mutation                 object \n",
+      " 2   numero_disposition            int64  \n",
+      " 3   nature_mutation               object \n",
+      " 4   valeur_fonciere               float64\n",
+      " 5   adresse_numero                float64\n",
+      " 6   adresse_suffixe               object \n",
+      " 7   adresse_nom_voie              object \n",
+      " 8   adresse_code_voie             object \n",
+      " 9   code_postal                   float64\n",
+      " 10  code_commune                  object \n",
+      " 11  nom_commune                   object \n",
+      " 12  code_departement              object \n",
+      " 13  ancien_code_commune           float64\n",
+      " 14  ancien_nom_commune            object \n",
+      " 15  id_parcelle                   object \n",
+      " 16  ancien_id_parcelle            object \n",
+      " 17  numero_volume                 object \n",
+      " 18  lot1_numero                   object \n",
+      " 19  lot1_surface_carrez           float64\n",
+      " 20  lot2_numero                   object \n",
+      " 21  lot2_surface_carrez           float64\n",
+      " 22  lot3_numero                   object \n",
+      " 23  lot3_surface_carrez           float64\n",
+      " 24  lot4_numero                   float64\n",
+      " 25  lot4_surface_carrez           float64\n",
+      " 26  lot5_numero                   object \n",
+      " 27  lot5_surface_carrez           float64\n",
+      " 28  nombre_lots                   int64  \n",
+      " 29  code_type_local               float64\n",
+      " 30  type_local                    object \n",
+      " 31  surface_reelle_bati           float64\n",
+      " 32  nombre_pieces_principales     float64\n",
+      " 33  code_nature_culture           object \n",
+      " 34  nature_culture                object \n",
+      " 35  code_nature_culture_speciale  object \n",
+      " 36  nature_culture_speciale       object \n",
+      " 37  surface_terrain               float64\n",
+      " 38  longitude                     float64\n",
+      " 39  latitude                      float64\n",
+      "dtypes: float64(16), int64(2), object(22)\n",
+      "memory usage: 1017.5+ MB\n"
      ]
     }
    ],
    "source": [
-    "print('Hello la team LM')"
+    "df = pd.read_csv('/Users/thibaultdanel/Downloads/full.csv')\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/77/c88_28012qx0xb53kvscmnm80000gn/T/ipykernel_18964/2130263593.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['code_postal'] = df_clean['code_postal'].replace(np.nan, '0000')\n",
+      "/var/folders/77/c88_28012qx0xb53kvscmnm80000gn/T/ipykernel_18964/2130263593.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_clean['code_postal'] = df_clean['code_postal'].astype(int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type_local</th>\n",
+       "      <th>code_departement</th>\n",
+       "      <th>adresse_nom_voie</th>\n",
+       "      <th>code_postal</th>\n",
+       "      <th>nom_commune</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dépendance</td>\n",
+       "      <td>1</td>\n",
+       "      <td>RUE GEN LOGEROT</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>Bourg-en-Bresse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Appartement</td>\n",
+       "      <td>1</td>\n",
+       "      <td>RUE GEN LOGEROT</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>Bourg-en-Bresse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maison</td>\n",
+       "      <td>1</td>\n",
+       "      <td>RUE DE LA BARMETTE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Nivigne et Suran</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Maison</td>\n",
+       "      <td>1</td>\n",
+       "      <td>RUE DE LA BARMETTE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Nivigne et Suran</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Maison</td>\n",
+       "      <td>1</td>\n",
+       "      <td>RUE DE LA BARMETTE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Nivigne et Suran</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SAINT AMOUZE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Montagnat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SAINT AMOUZE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Montagnat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SAINT AMOUZE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Montagnat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SAINT AMOUZE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Montagnat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SAINT AMOUZE</td>\n",
+       "      <td>1250</td>\n",
+       "      <td>Montagnat</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      type_local code_departement    adresse_nom_voie  code_postal  \\\n",
+       "0     Dépendance                1     RUE GEN LOGEROT         1000   \n",
+       "1    Appartement                1     RUE GEN LOGEROT         1000   \n",
+       "2         Maison                1  RUE DE LA BARMETTE         1250   \n",
+       "3         Maison                1  RUE DE LA BARMETTE         1250   \n",
+       "4         Maison                1  RUE DE LA BARMETTE         1250   \n",
+       "..           ...              ...                 ...          ...   \n",
+       "96           NaN                1        SAINT AMOUZE         1250   \n",
+       "97           NaN                1        SAINT AMOUZE         1250   \n",
+       "98           NaN                1        SAINT AMOUZE         1250   \n",
+       "99           NaN                1        SAINT AMOUZE         1250   \n",
+       "100          NaN                1        SAINT AMOUZE         1250   \n",
+       "\n",
+       "          nom_commune  \n",
+       "0     Bourg-en-Bresse  \n",
+       "1     Bourg-en-Bresse  \n",
+       "2    Nivigne et Suran  \n",
+       "3    Nivigne et Suran  \n",
+       "4    Nivigne et Suran  \n",
+       "..                ...  \n",
+       "96          Montagnat  \n",
+       "97          Montagnat  \n",
+       "98          Montagnat  \n",
+       "99          Montagnat  \n",
+       "100         Montagnat  \n",
+       "\n",
+       "[101 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "df_clean = df[['type_local','code_departement','adresse_nom_voie', 'code_postal','nom_commune' ]]\n",
+    "df_clean['code_postal'] = df_clean['code_postal'].replace(np.nan, '0000')\n",
+    "df_clean['code_postal'] = df_clean['code_postal'].astype(int)\n",
+    "df_clean.loc[0:100]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
