--- a/Code/master.ipynb
+++ b/Code/master.ipynb
@@ -84,10 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok cleaning\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('ok cleaning')"
+   ]
   }
  ],
  "metadata": {
